--- a/sign.css
+++ b/sign.css
@@ -1,13 +1,25 @@
-.signin{
-    align-items: center;
+.container2{
+    display: flex;
+  justify-content:center;
+  align-items:center;
 
+}
+.prepare2{
+    width: 60%;
+    height: 70vh;
+   
+    display: block;
+    margin-left: auto;
+    margin-right:auto ;
+    
 }
 .wrong{
-    margin-left: 95%;
-    
+  margin-left: 95%;
+  
 
-   
+ 
 }
 .color4{
-    color:black ;
+  color:black ;
 }
+
