--- a/style16.css
+++ b/style16.css
@@ -1,10 +1,16 @@
-.thumbnail{
-    width:100%;
-    height:100vh;
+.container1{
+    display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
-.shelter1{
-    text-align: center;
-    color:
+.prepare1{
+    width: 100%;
+    height: 20vh;
+   
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 .but{
     color: black;
@@ -13,8 +19,29 @@
 .color1{
     color:red;
 }
-
-.center{
-    padding-left: 35%;
-    
+.middle{
+    text-align: center;
 }
+
+.wrong{
+    margin-left: 95%;
+
+    
+
+   
+}
+.color4{
+    color:black ;
+}
+.label{
+    text-align: center;
+}
+.label1{
+    background-color: transparent;
+    background-size: auto;
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
+    border-color: gray;
+}
+
