--- a/style162.css
+++ b/style162.css
@@ -1,9 +1,17 @@
 .education {
     width: 100%;
-    height: 100vh;
-    background-size: cover;
-    background-position: center;
+    height: 80vh;
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
+    
   }
+  .container
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
   
   .table {
     text-align: center;
@@ -32,12 +40,32 @@
   }
 
 .prepare{
-    width: 100%;
+  width: 100%;
+  height: 80vh;
+ 
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  
+  
     
 }
 
 .but{
     color: black;
 
+}
+.but{
+  color: black;
+
+}
+.wrong{
+  margin-left: 95%;
+  
+
+ 
+}
+.color4{
+  color:black ;
 }
 
